[package]
name = "end2end-helpers"
edition = "2021"
version = "0.1.0"
publish = false

[dependencies]
leptos = { git = "https://github.com/leptos-rs/leptos", features = ["nightly"] }
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "Storage"
] }
wasm-bindgen.workspace = true
gloo-utils.workspace = true
